test/fail/parse_fn_sig_wrong_order.ms
fn test(): Int32 (x: Int32) {};
